# AndroidFFmpegStudy

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/ming/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ming/ffmpeg/: FFAudioActivity.java  FFmpegActivity.java  MainActivity.java
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/cpp/: AVPacketQueue.cpp  Player.cpp  ffmpeg.cpp
app/src/main/jni/cpp/ffaudio/: AVPacketQueue.cpp  CallJava.cpp  FFAudio.cpp  FFAudioJNINative.cpp
app/src/main/jni/h/ffaudio/: CallJava.h  FFAudio.h
app/src/main/jni/h/queue/: av_packet_queue.h
app/src/main/jni/h/self_jni/: base.h  player.h
app/src/main/jni/h/test/: test.h
app/src/main/res/layout/: activity_main.xml  ffaudio_activity.xml
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/ming/ffmpeg/: ExampleUnitTest.java
ffmpeg_examples/: filtering_audio.c
gradle/wrapper/: gradle-wrapper.properties
reference/: native-lib.cpp
source_code/: VERSION
